// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationBase should render with all props 1`] = `
<ThemeProvider
  themeName="test-theme"
>
  <ThemeContextProvider
    theme={
      Object {
        "className": "test-theme",
        "name": "test-theme",
      }
    }
  >
    <Base
      customMessages={Object {}}
      locale="en"
      strictMode={false}
      throwOnI18nLoadError={false}
    >
      <InjectIntl(Component)>
        <ActiveBreakpointProvider>
          <withPromptRegistration(NavigationPromptCheckpoint)
            onPromptChange={[Function]}
          >
            <div>
              content
            </div>
          </withPromptRegistration(NavigationPromptCheckpoint)>
        </ActiveBreakpointProvider>
      </InjectIntl(Component)>
    </Base>
  </ThemeContextProvider>
</ThemeProvider>
`;

exports[`ApplicationBase should render with minimal props 1`] = `
<ThemeProvider>
  <ThemeContextProvider
    theme={
      Object {
        "className": undefined,
        "name": "terra-default-theme",
      }
    }
  >
    <Base
      customMessages={Object {}}
      locale="en"
      strictMode={false}
      throwOnI18nLoadError={false}
    >
      <InjectIntl(Component)>
        <ActiveBreakpointProvider>
          <withPromptRegistration(NavigationPromptCheckpoint)
            onPromptChange={[Function]}
          >
            <div>
              content
            </div>
          </withPromptRegistration(NavigationPromptCheckpoint)>
        </ActiveBreakpointProvider>
      </InjectIntl(Component)>
    </Base>
  </ThemeContextProvider>
</ThemeProvider>
`;

exports[`ApplicationBase should render with the preferred browser local 1`] = `
<ThemeProvider>
  <ThemeContextProvider
    theme={
      Object {
        "className": undefined,
        "name": "terra-default-theme",
      }
    }
  >
    <Base
      customMessages={Object {}}
      locale="en"
      strictMode={false}
      throwOnI18nLoadError={false}
    >
      <InjectIntl(Component)>
        <ActiveBreakpointProvider>
          <withPromptRegistration(NavigationPromptCheckpoint)
            onPromptChange={[Function]}
          >
            <div>
              content
            </div>
          </withPromptRegistration(NavigationPromptCheckpoint)>
        </ActiveBreakpointProvider>
      </InjectIntl(Component)>
    </Base>
  </ThemeContextProvider>
</ThemeProvider>
`;
